tests/Rules/Anchor/Fixtures/valid/link_with_aria_label.html.twig
<html>
  <body>
    <a href="/foo" aria-label="Go to home"></a>
  </body>
</html>
