tests/Rules/Anchor/Fixtures/invalid/link_with_empty_aria_label.html.twig
{# 1 errors #}
<html>
  <body>
    <a href="/foo" aria-label=""></a>
  </body>
</html>
